# simplelife-app

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
designs/: README.md
docs/: design.md
scripts/: mark-backlog-done.ps1  run.ps1  seed-backlog.ps1
webapp/: main.py  quote_engine.py
webapp/static/: styles.css
webapp/templates/: about.html  base.html  index.html  quote.html
